[tool.poetry]
name = "earth-wallpaper"
version = "0.1.0"
description = ""
authors = ["David Armstrong"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.4.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
